[gd_scene load_steps=7 format=3 uid="uid://0ksppso7ecgq"]

[ext_resource type="Texture2D" uid="uid://beat48ox47yhc" path="res://addons/flowfield_pathfinding/Misc/Tile.png" id="1_h3pvo"]
[ext_resource type="Script" path="res://addons/flowfield_pathfinding/Scripts/Example_Script.gd" id="1_yj4ly"]
[ext_resource type="Script" path="res://addons/flowfield_pathfinding/Scripts/pathing_manager.gd" id="2_gdps3"]
[ext_resource type="Script" path="res://addons/flowfield_pathfinding/Scripts/example_scene_cam_script.gd" id="4_qi6nj"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_h3lkt"]
texture = ExtResource("1_h3pvo")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_5k1f8"]
sources/0 = SubResource("TileSetAtlasSource_h3lkt")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_yj4ly")

[node name="PathingManager" type="TileMap" parent="."]
tile_set = SubResource("TileSet_5k1f8")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 65537, 0, 0, 131074, 0, 0, 131075, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 327689, 0, 0, 327690, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 458764, 0, 0, 458765, 0, 0, 524301, 0, 0, 524302, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 524304, 0, 0, 458768, 0, 0, 393232, 0, 0, 327696, 0, 0, 262160, 0, 0, 196624, 0, 0, 131088, 0, 0, 7, 0, 0, 6, 0, 0, 5, 0, 0, 4, 0, 0, 65539, 0, 0, 65538, 0, 0, 2, 0, 0, 3, 0, 0, 1, 0, 0, 65536, 0, 0, 131072, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 262146, 0, 0, 327682, 0, 0, 327683, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 524300, 0, 0, 589837, 0, 0, 589836, 0, 0, 589835, 0, 0, 589834, 0, 0, 589833, 0, 0, 589832, 0, 0, 589831, 0, 0, 589830, 0, 0, 589829, 0, 0, 589828, 0, 0, 589827, 0, 0, 589826, 0, 0, 589825, 0, 0, 524289, 0, 0, 458753, 0, 0, 458752, 0, 0, 393216, 0, 0, 327680, 0, 0, 262144, 0, 0, 196608, 0, 0, 589824, 0, 0, 524288, 0, 0, 393217, 0, 0, 393218, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 393225, 0, 0, 458760, 0, 0, 458759, 0, 0, 458758, 0, 0, 458757, 0, 0, 524292, 0, 0, 524291, 0, 0, 524290, 0, 0, 524293, 0, 0, 524299, 0, 0, 524303, 0, 0, 458766, 0, 0, 393230, 0, 0, 327694, 0, 0, 327695, 0, 0, 262159, 0, 0, 196623, 0, 0, 196622, 0, 0, 131087, 0, 0, 65547, 0, 0, 65546, 0, 0, 65545, 0, 0, 65544, 0, 0, 65543, 0, 0, 65542, 0, 0, 65541, 0, 0, 65540, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 262158, 0, 0, 393231, 0, 0, 458767, 0, 0, 262157, 0, 0, 262156, 0, 0, 262155, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 393229, 0, 0, 196621, 0, 0, 196619, 0, 0, 196618, 0, 0, 196617, 0, 0, 196616, 0, 0, 196615, 0, 0, 196620, 0, 0, 262154, 0, 0, 262153, 0, 0, 196614, 0, 0, 262148, 0, 0, 262147, 0, 0, 262149, 0, 0, 196610, 0, 0, 327681, 0, 0, 393219, 0, 0, 458756, 0, 0, 458755, 0, 0, 458754, 0, 0, 524296, 0, 0, 524295, 0, 0, 524294, 0, 0, 524297, 0, 0, 524298, 0, 0, 655361, 0, 0, 720897, 0, 0, 720896, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 720912, 0, 0, 720911, 0, 0, 720910, 0, 0, 720909, 0, 0, 720908, 0, 0, 720907, 0, 0, 720906, 0, 0, 720905, 0, 0, 720904, 0, 0, 720903, 0, 0, 720902, 0, 0, 720901, 0, 0, 720900, 0, 0, 720899, 0, 0, 720898, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 655382, 0, 0, 589846, 0, 0, 524310, 0, 0, 458774, 0, 0, 393238, 0, 0, 327702, 0, 0, 327701, 0, 0, 262165, 0, 0, 196629, 0, 0, 131093, 0, 0, 65557, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 65563, 0, 0, 65564, 0, 0, 65565, 0, 0, 65566, 0, 0, 131102, 0, 0, 131101, 0, 0, 131100, 0, 0, 196635, 0, 0, 196634, 0, 0, 196633, 0, 0, 196632, 0, 0, 196631, 0, 0, 196630, 0, 0, 131094, 0, 0, 65558, 0, 0, 65559, 0, 0, 65560, 0, 0, 65561, 0, 0, 65562, 0, 0, 131099, 0, 0, 131098, 0, 0, 131097, 0, 0, 131096, 0, 0, 131095, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 65567, 0, 0, 31, 0, 0, 131103, 0, 0, 196639, 0, 0, 196638, 0, 0, 196637, 0, 0, 196636, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 458772, 0, 0, 458771, 0, 0, 458770, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 262172, 0, 0, 327708, 0, 0, 393244, 0, 0, 458780, 0, 0, 458779, 0, 0, 458778, 0, 0, 393241, 0, 0, 393240, 0, 0, 458776, 0, 0, 458777, 0, 0, 393243, 0, 0, 327707, 0, 0, 327706, 0, 0, 327705, 0, 0, 327704, 0, 0, 393242, 0, 0, 524313, 0, 0, 524312, 0, 0, 589848, 0, 0, 589849, 0, 0, 655385, 0, 0, 655386, 0, 0, 720922, 0, 0, 720923, 0, 0, 720924, 0, 0, 655388, 0, 0, 589852, 0, 0, 524316, 0, 0, 524315, 0, 0, 589851, 0, 0, 589850, 0, 0, 655387, 0, 0, 524314, 0, 0, 655384, 0, 0, 720920, 0, 0, 720921, 0, 0, 20, 0, 0)
script = ExtResource("2_gdps3")

[node name="DebugVectorContainer" type="Node2D" parent="PathingManager"]

[node name="Camera" type="Camera2D" parent="."]
script = ExtResource("4_qi6nj")

[node name="Container" type="BoxContainer" parent="Camera"]
offset_left = 500.0
offset_top = -324.0
offset_right = 575.0
offset_bottom = -190.0
alignment = 1
vertical = true

[node name="Up" type="Button" parent="Camera/Container"]
layout_mode = 2
text = "Up"

[node name="Toggle" type="Button" parent="Camera/Container"]
layout_mode = 2
text = "Toggle
Debug"

[node name="Down" type="Button" parent="Camera/Container"]
layout_mode = 2
text = "Down"

[connection signal="pressed" from="Camera/Container/Up" to="PathingManager" method="layer_up"]
[connection signal="pressed" from="Camera/Container/Toggle" to="PathingManager" method="debug_update" binds= ["Debug UI"]]
[connection signal="pressed" from="Camera/Container/Down" to="PathingManager" method="layer_down"]
